--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -11,115 +11,170 @@
     <title>Document</title>
 </head>
 <body>
-<header class="header" id="inicio">
-        <div>
-            <img class="img__icono" src="../imagenes/icono.jpg" alt="icono">  
-        </div>
-        <div class="div__menu">
-            <nav class="nav__menu">
-
-            <a class="menu btn btn-primary" href="#section_contacto">Contacto</a>
-            <a class="menu btn btn-primary" href="../index.html"> Inicio</a>
-        </nav>
-        </div>
-        <div>
-            <H1 class="h1__index animate__animated animate__rubberBand " id="inicio">Autopartes y Repuestos G&G </H1>
-        </div>
-</header>
-    <!--Section de servicios -->
-<section class="img__fondo__service">
-        <div class="fondo__Service">
-            <img class="fondo__service" src="../imagenes/taller-mecanico.jpg" alt="Service">
-            <p class=" texto__img">  Ofrecemos el mejor servicio automotriz con personal cualificado y especialido
-            </p> 
-        </div> 
-<!--Chapa y pintura-->
-        <div class="div__chapa__pintura">
-            <img class="img__pintura" src="../imagenes/chapa y pintura.jpg" alt=" chapa">
-            <img class="img__pintura" src="../imagenes/saca_bollosjpg.jpg" alt="chapa" >
-            <p class="texto__img__chapa"> los mejores Chapistas los tenemos acá
-            </p>
-        </div>
-<!--alineacion y balanceo-->
-        <div class="alineacion">
-            <img  class="img__alineacion" src="../imagenes/alineacion.jpg" alt=" alineacion">
-            <p class="texto__img__alineacion"> Recuerda siempre balancear y alinear tus gomas
-            </p>
-            <p class=" texto__alineacion">
-            Se recomienda que la alineación y el balanceo se realicen cada 10 000 kilómetros, dos veces al año y en ambos ejes de la unidad, es decir,
-            tanto en la parte delantera como en la trasera.
-            </p>
-        </div>
-</section>
-        <h2 class=" h2__atencion" id="section_contacto"> Contactanos y agenda tu turno </h2>
-<section  class="section__contacto">
-        <div>
-            <ul class="agenda__turno">
+    <header class="header" id="inicio">
+            <div>
+                <img class="img__icono" src="../imagenes/icono.jpg" alt="icono">  
+            </div>
+            <div>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                    <a class="navbar-brand" href="../index.html">Inicio</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#section_contacto">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#ubicacion">Ubicacion</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Dropdown
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="./pages/servicios.html">Servicio</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="#viajero">Viajero</a>
+                        </li>
+                        </ul>
+                        <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
+                    </div>
+                    </div>
+                </nav>
+                </div>
+            </div>
+        
+    </header>
+        <section>
+                    <div>
+                        <H1 class="h1__index animate__animated animate__rubberBand " id="inicio">Autopartes y Repuestos G&G </H1>
+                    </div>
+                    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="../imagenes/taller-mecanico.jpg" class="d-block w-100 img__fondo__service" alt="taller" height="500px">
+                        <div class="carousel-caption d-none d-md-block">
+                        <h5>Taller Mecanico</h5>
+                        <p>Brindamos el mejor servicio Automotriz con un equipo especializado</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="../imagenes/chapa y pintura.jpg" class="d-block w-100 img__fondo__service" alt="pintura" height="500px">
+                        <div class="carousel-caption d-none d-md-block">
+                        <h5>Chapa y Pintura</h5>
+                        <p> Aca tenemos los mejores chapistas</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../imagenes/saca_bollos.jpg" class="d-block w-100 img__fondo__service" alt="saca bollos" height="500px">
+                        <div class="carousel-caption d-none d-md-block">
+                        <h5>Saca Bollos </h5>
+                        <p> Areglamos abolladuras y rayaduras en el acto</p>
+                        </div>
+                    </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                <div>
+                    <ul class="agenda__turno">
+                        <li>celular : +58 414 2563256</li>
+                        <li>telefono fijo :0212 112390991 </li>
+                        <li>email: autopartesyrepuestosg&g@hotmail.com</li>
+                    </ul>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+        </section>
+                <div>
+                    <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.3414226903947!2d-69.30699548626473!3d10.071085292802438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e876776baed2795%3A0x4465f249b7c59901!2sCarrera%2023%20%26%20Calle%2013%2C%20Barquisimeto%203001%2C%20Lara%2C%20Venezuela!5e0!3m2!1sen!2sar!4v1636903870977!5m2!1sen!2sar" width="100%" height="450" style="border: 5px;;" allowfullscreen="" loading="lazy" id="ubicacion"></iframe>
+                </div>
+        <footer class="footer">
+            
+            <div>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                    <a class="navbar-brand" href="#inicio">Arriba</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#section_contacto">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#empresa">Empresa</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Dropdown
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="./pages/servicios.html">Servicio</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="../index.html">Inicio</a>
+                        </li>
+                        </ul>
+                        <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
+                    </div>
+                    </div>
+                </nav>
+                </div>
+            </div>
+                <a href="https://www.facebook.com/">
+                <img  class="img__footer" src="../imagenes/Facebook.png" alt="facebook" width="50px">
+            </a>
+                <a href="https://www.instagram.com/">
+                <img class="img__footer" src="../imagenes/1025px-Instagram-Icon.png" alt="instagram" width="50px">
+            </a>
+                <a href="https://twitter.com/">
+                <img class="img__footer" src="../imagenes/twitter.png" alt="twitter" width="50px">
+            </a>
+            <ol class="ol__footer">
                 <li>celular : +58 414 2563256</li>
                 <li>telefono fijo :0212 112390991 </li>
                 <li>email: autopartesyrepuestosg&g@hotmail.com</li>
-            </ul>
-        </div>
-     <!--<div>
-        <form class="cuadro__consulta" action="" method="">
-            <div>  
-                <label  for="Nombre">Nombre</label>
-                <input class="consulta__contacto" type="text" name= "nombre" placeholder="Escribe tu nombre" required>
-            </div>
-
-            <div>
-                <label for="Apellido">Apellido</label>
-                <input class="consulta__contacto" type="text" name= "Apellido" placeholder="Escribe tu Apellido" required>
-            </div>
-            <div class="conasulta__contacto">  
-                <label for="Email">Email</label>
-                <input class="consulta__contacto" type="text" name= "Email" placeholder="Escribe tu Email" required>
-            </div>
-            <div>
-                <label  for="numero de contacto">Numero de contacto</label>
-                <input class="consulta__contacto" type="text" placeholder=" escribe tu numero de contacto" required>
-            </div>
-            <div>
-                <textarea class="consulta__textarea" name=" Escribe aca tu pregunta" id="Pregunta" cols="30" rows="10">
-                </textarea>
-                <input type="button" value="Enviar">
-                <p class="p__contacto">
-    </div> -->
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-    </div>
-    <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    </div>
-</section>
-<div>
-    <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.3414226903947!2d-69.30699548626473!3d10.071085292802438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e876776baed2795%3A0x4465f249b7c59901!2sCarrera%2023%20%26%20Calle%2013%2C%20Barquisimeto%203001%2C%20Lara%2C%20Venezuela!5e0!3m2!1sen!2sar!4v1636903870977!5m2!1sen!2sar" width="100%" height="450" style="border: 5px;;" allowfullscreen="" loading="lazy"></iframe>
-</div>
-    <footer class="footer">
-        <div class="div__menu">
-        <a class="menu btn btn-primary" href="#inicio">Arriba</a>
-        <a class="menu btn btn-primary" href="#section_contacto">Contacto</a>
-        <a class="menu btn btn-primary" href= "../index.html">Inicio</a>
-        </div>
-            <a href="https://www.facebook.com/">
-            <img  class="img__footer" src="../imagenes/Facebook.png" alt="facebook" width="50px">
-        </a>
-            <a href="https://www.instagram.com/">
-            <img class="img__footer" src="../imagenes/1025px-Instagram-Icon.png" alt="instagram" width="50px">
-        </a>
-            <a href="https://twitter.com/">
-            <img class="img__footer" src="../imagenes/twitter.png" alt="twitter" width="50px">
-        </a>
-        <ol class="ol__footer">
-            <li>celular : +58 414 2563256</li>
-            <li>telefono fijo :0212 112390991 </li>
-            <li>email: autopartesyrepuestosg&g@hotmail.com</li>
-        </ol>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="./assets/js/wow.min.js"></script>
-        <script> new WOW().init(); </script>
+            </ol>
+        </footer>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+            <script src="./assets/js/wow.min.js"></script>
+            <script> new WOW().init(); </script>
 </body>
 </html>
